# Wave

./: .gitignore  LICENSE  README.md  processed.csv  pyproject.toml
data/upper_bound/configs/: b4_s1_d1024_f4096_20250815_112733_config.json  b4_s1_d1024_f4096_20250815_113157_config.json  b4_s1_d1024_f4096_20250815_113250_config.json  b4_s1_d1024_f4096_20250815_113306_config.json  b4_s1_d1024_f4096_20250815_113328_config.json  b4_s1_d1024_f4096_20250815_113351_config.json  b4_s1_d1024_f4096_20250815_113417_config.json  b4_s1_d1024_f4096_20250815_113430_config.json  b4_s1_d1024_f4096_20250815_113455_config.json  b4_s1_d1024_f4096_20250815_113509_config.json  b4_s1_d1024_f4096_20251215_020900_config.json  b4_s1_d1024_f4096_20251215_020934_config.json  b4_s1_d1024_f4096_20251215_021007_config.json  (+1 more)
eval/lower_bound/: collect_metrics.py  create_model.py  inference.py
eval/upper_bound/: collect_metrics.py  run_split_attack.py
scripts/: analyze_motivating_example.py  analyze_overhead.py  analyze_upper_bound.py  batch_process.py  calculate_model_size.py  collect_lower_bound_data.sh  collect_motivating_example_data.sh  collect_upper_bound_data.sh  evaluate_overhead.sh  plot_flops.py  plot_load_bytes.py  run_preprocessing_pipeline.py  run_upper_bound_pipeline.py  setup_environment.sh  test_role_order.py  verify_lower_bound.py  verify_upper_bound.py
src/gpu_pmc_analyzer/: README.md  __init__.py  analyzer.py  preprocessor.py
src/gpu_pmc_verifier/: __init__.py  split_attacker.py  verifier.py
src/utils/: __init__.py  find_max_cycle.py  logger.py
(+499 files in other folders)
