[project]
name = "wave"
version = "0.1.0"
description = "Artifact for Wave: Leveraging Architecture Observation for Privacy-Preserving Model Oversight, accepted by ASPLOS 2026."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.5",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "z3-solver>=4.15.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src"]
line-length = 88
